--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pandas==0.24.2
 numpy==1.16.2 
-xgboost==1.3.1
+xgboost==1.4.0
 lightgbm==3.1.1 
 catboost==0.24.4
 ConfigSpace==0.4.17
 scikit-optimize==0.8.1
 scikit-learn==0.24.0
+wheel==0.36.2
