--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ log.log
 .nyc_output
 .vscode-test
 .vscode
+.ipynb_checkpoints
 __pycache__
 Archived
-Experiments/archived_results
 npm-debug.log
 **/.mypy_cache/**
 !yarn.lock
